--- a/css/tpc-contact-us.css
+++ b/css/tpc-contact-us.css
@@ -32,7 +32,7 @@
     min-height: 75px;
     height: fit-content;
     width: 100%;
-    padding: 10px;
+    padding: 0px;
     display: block;
   }
   
@@ -45,7 +45,7 @@
     line-height: 50px;
     font-weight: 900;
     text-align: center;
-    margin: 0px 0px 70px 0px;
+    padding: 50px 0px 50px 0px;
   }
   
   .team-card-container {
